@@ -25,10 +25,13 @@ endif::[]
 
 [float]
 ===== Features
+
 * Add support for <<supported-databases, Redis Lettuce client>>
+* Add `context.message.age.ms` field for JMS message receiving spans and transactions - {pull}970[#970]
 
 [float]
 ===== Bug Fixes
+
 * Fix parsing value of `trace_methods` configuration property {pull}930[#930]
 * Workaround for `java.util.logging` deadlock {pull}965[#965]
 
